# hw-backend-summer-2021-2-aiohttp

./: config.yml  pyproject.toml
app/admin/: models.py  schemes.py  views.py
app/quiz/: schemes.py  views.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/bot/: manager.py
app/store/database/: database.py
app/store/quiz/: accessor.py
app/store/vk_api/: accessor.py  poller.py
app/web/: app.py  config.py  middlewares.py  mixins.py
